--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Manrope", sans-serif;
-  background-color: #191b1c;
+  /* background-color: #191b1c; */
 }
 
 a {
